<resources>
    <string name="app_name">Correapp</string>
<<<<<<< HEAD
=======

    <string name="title_activity_logo">LogoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="logo">C o r r e a p p</string>
    <string name="title_activity_show_route">Map</string>
    <string name="title_activity_create_trip">CreateTrip</string>

    <string-array name="items_tipos_de_mascotas">
        <item>Tipo de mascota</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Pajaro</item>
        <item>Iguana</item>
        <item>Hamster</item>
        <item>Pez</item>
        <item>Conejo</item>
        <item>Serpiente</item>
    </string-array>

    <string-array name="items_tamano_mascotas">
        <item>Tamaño</item>
        <item>Chico</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


>>>>>>> ft-maps
    <string name="activity_rate_trip">Puntuar viaje</string>
    <string name="submit">Enviar</string>
    <string name="rate_star_question">¿Cuánto puntuarías este viaje?</string>
    <string name="rate_driver_extra_question">¿El trato con el cliente fue adecuado?</string>
    <string name="rate_driver_extra_comment_question">¿Por qué?</string>
<<<<<<< HEAD
=======
    <string name="rate_client_extra_comment_question">Podés dejar un comentario:</string>
>>>>>>> ft-maps
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="placeholder_comment">Respuesta</string>
    <string name="rate_client_improvements">¿Qué servicio mejorarías?</string>
    <string name="rate_client_improvements_driver">Chofer</string>
    <string name="rate_client_improvements_app">App</string>
    <string name="rate_client_improvements_car">Auto</string>
<<<<<<< HEAD
=======

    <string name="facebook_app_id">663094277443974</string>
    <string name="fb_login_protocol_scheme">fb663094277443974</string>


>>>>>>> ft-maps
</resources>
