<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RateTripDriverActivity"
    >

    <LinearLayout
        style="@style/HeaderLayout"
        android:layout_weight="3"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:background="#ECECEC"
            android:gravity="center"
            android:text="@string/activity_rate_trip"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="@android:dimen/app_icon_size"
            android:textStyle="bold"
            android:translationZ="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_weight="4"
        android:background="#FFFF"
        >

        <TextView
            style="@style/Subtitle"
            android:text="@string/rate_star_question" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_weight="8"
        android:background="#FFFF"
        >

        <TextView
            style="@style/Subtitle"
            android:text="@string/rate_client_improvements" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_client_improvements_driver"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_material_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_client_improvements_car"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_material_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_client_improvements_app"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_material_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="121dp"
            android:text="@string/rate_client_improvements_app"
            android:textAlignment="viewEnd"
            android:textColor="#FFF"
            android:textSize="14sp" />
        <Button
            android:id="@+id/button_submit"
            style="@style/AppButton" />

    </LinearLayout>


</LinearLayout>